added homepage/navigation structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
         <title>Victor M. Lujan Jr.</title>
     </head>
     <body>
-        <header>This is a header</header>
-        <footer>This is a footer</footer>
+        <header>
+            <h1>
+                Victor M. Lujan Jr.
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <footer>
+            This is a footer
+        </footer>
     </body>
 </html>
