added footer content

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
                 </ul>
             </nav>
         </header>
+        
         <footer>
-            This is a footer
+            <h3>This is a footer</h3>
+            <div>
+                &copy; 2022 Victor M. Lujan Jr.
+            </div>
         </footer>
     </body>
 </html>
