added style to header

--- a/index.html
+++ b/index.html
@@ -3,33 +3,46 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Font : Rock Salt & Belgrano -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Belgrano&family=Rock+Salt&display=swap" rel="stylesheet">
+        <!-- Stylesheet -->
         <link rel="stylesheet" href="./assets/css/stylesheet.css" />
-        <title>Victor M. Lujan Jr.</title>
+        <title>Victor Lujan</title>
     </head>
     <body>
+        <!-- Name / Navigation -->
         <header>
             <h1>
-                Victor M. Lujan Jr.
+                .victor-lujan <span class="header-brackets">{</span>
             </h1>
+            <p class="header-p">
+                <span class="header-p-color">full stack</span>: developer;
+            </p>
+            <p>
+                <span class="header-brackets">}</span>
+            </p>
             <nav>
-                <ul>
-                    <li>
-                        <a href="#"></a>
+                <ul class="nav-list">
+                    <li class="nav1">
+                        <a href="#about" class="nav-links">About</a>
                     </li>
-                    <li>
-                        <a href="#"></a>
+                    <li class="nav2">
+                        <a href="#projects" class="nav-links">Projects</a>
                     </li>
-                    <li>
-                        <a href="#"></a>
+                    <li class="nav3">
+                        <a href="#contact" class="nav-links">Contact</a>
                     </li>
                 </ul>
             </nav>
+            <img src="./assets/images/avatar.svg" alt="an avatar of the developer" />
         </header>
-        
+
         <footer>
             <h3>This is a footer</h3>
             <div>
-                &copy; 2022 Victor M. Lujan Jr.
+                &copy; 2022 Victor Lujan
             </div>
         </footer>
     </body>
