--- a/index.html
+++ b/index.html
@@ -11,39 +11,71 @@
         <link rel="stylesheet" href="./assets/css/stylesheet.css" />
         <title>Victor Lujan</title>
     </head>
+
     <body>
-        <!-- Name / Navigation -->
+        <!-- Home / Navigation -->
         <header>
-            <h1>
-                .victor-lujan <span class="header-brackets">{</span>
-            </h1>
-            <p class="header-p">
-                <span class="header-p-color">full stack</span>: developer;
-            </p>
-            <p>
-                <span class="header-brackets">}</span>
-            </p>
-            <nav>
-                <ul class="nav-list">
-                    <li class="nav1">
-                        <a href="#about" class="nav-links">About</a>
-                    </li>
-                    <li class="nav2">
-                        <a href="#projects" class="nav-links">Projects</a>
-                    </li>
-                    <li class="nav3">
-                        <a href="#contact" class="nav-links">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-            <img src="./assets/images/avatar.svg" alt="an avatar of the developer" />
+            <div class="home">
+                <div class="name-occupation">
+                    <h1>
+                        .victor-lujan <span class="home-brackets">{</span>
+                    </h1>
+                    <p class="occupation">
+                        /* full stack: developer; */
+                    </p>
+                </div>
+                <nav>
+                    <ul class="nav-list">
+                        <li class="nav1">
+                            <a href="#about" class="nav-links">About</a>
+                        </li>
+                        <li class="nav2">
+                            <a href="#projects" class="nav-links">Projects</a>
+                        </li>
+                        <li class="nav3">
+                            <a href="#contact" class="nav-links">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <p>
+                    <span class="home-brackets">}</span>
+                </p>
+            </div>
         </header>
 
+        <!-- Hero -->
+        <figure>
+            <img src="./assets/images/avatar.svg" alt="an avatar of the developer" />
+        </figure>
+        
+        <!-- Main Content -->
+        <main>
+            <!-- About -->
+            <article>
+                <h2 id="about">About</h2>
+                <p>
+                    I like movies, video games, and code!
+                </p>
+            </article>
+            <section>
+                <h2 id="projects">Projects</h2>
+                <p>
+                    run-buddy
+                </p>
+                <p>
+                    horiseon
+                </p>
+            </section>
+        </main>
+
         <footer>
-            <h3>This is a footer</h3>
-            <div>
-                &copy; 2022 Victor Lujan
-            </div>
+            <h3 id="contact" class="contact">Contact</h3>
+            <address>
+                Victor Lujan <br /> <!-- You can use margins instead of br -->
+                E: vmlujanjr@outlook.com <br />
+                P: 956-415-2269 <br />
+            </address>
+            <p class="copyright">&copy; 2022 Victor Lujan</p>
         </footer>
     </body>
 </html>
