revision home / navigation, added lorem text to main content, and separated contact and copyright sections

--- a/index.html
+++ b/index.html
@@ -15,32 +15,41 @@
     <body>
         <!-- Home / Navigation -->
         <header>
-            <div class="home">
+            <!-- Home -->
+            <section class="home">
+                <!-- Name / Occupation -->
                 <div class="name-occupation">
                     <h1>
-                        .victor-lujan <span class="home-brackets">{</span>
+                        <a href="/" class="name">.victor-lujan <span class="home-brackets">{</span></a>
                     </h1>
                     <p class="occupation">
-                        /* full stack: developer; */
+                        <span class="element-color">full-stack</span>: <span class="comment-color">developer</span>;
+                    </p>
+                    <p>
+                        <span class="home-brackets">}</span>
                     </p>
                 </div>
+                <!-- Navigation Menu -->
                 <nav>
                     <ul class="nav-list">
                         <li class="nav1">
-                            <a href="#about" class="nav-links">About</a>
+                            <a href="#about" class="nav-links">
+                                <span class="about-link"></span>
+                            </a>
                         </li>
                         <li class="nav2">
-                            <a href="#projects" class="nav-links">Projects</a>
+                            <a href="#projects" class="nav-links">
+                                <span class="projects-link"></span>
+                            </a>
                         </li>
                         <li class="nav3">
-                            <a href="#contact" class="nav-links">Contact</a>
+                            <a href="#contact" class="nav-links">
+                                <span class="contact-link"></span>
+                            </a>
                         </li>
                     </ul>
                 </nav>
-                <p>
-                    <span class="home-brackets">}</span>
-                </p>
-            </div>
+            </section>
         </header>
 
         <!-- Hero -->
@@ -55,6 +64,40 @@
                 <h2 id="about">About</h2>
                 <p>
                     I like movies, video games, and code!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quas fuga sequi nihil repellat explicabo eaque similique ipsa quos velit sint possimus quam nam obcaecati et, optio eos illo laborum?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit tempore assumenda eaque, perspiciatis, doloribus, reprehenderit nobis eos nemo incidunt officia dolorum porro natus voluptates facere quos consectetur molestiae vel!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil repellat hic voluptate aspernatur voluptatem enim, pariatur nam, provident dolores quae sunt in illo eligendi quod facere omnis minima voluptas.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente obcaecati temporibus cumque totam veritatis labore ratione error, est, id, necessitatibus dignissimos ex sed! Modi molestias accusamus odio? Voluptates, numquam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit sunt excepturi ullam maiores soluta autem est corrupti, earum eos asperiores quo dolore fugiat nobis deleniti deserunt quaerat laboriosam? Dolorem, voluptates.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt quia corporis non at eius aliquam aperiam nesciunt, odit veritatis delectus impedit neque doloremque consequuntur iste maiores modi, libero sit enim.lorem
+                    I like movies, video games, and code!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quas fuga sequi nihil repellat explicabo eaque similique ipsa quos velit sint possimus quam nam obcaecati et, optio eos illo laborum?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit tempore assumenda eaque, perspiciatis, doloribus, reprehenderit nobis eos nemo incidunt officia dolorum porro natus voluptates facere quos consectetur molestiae vel!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil repellat hic voluptate aspernatur voluptatem enim, pariatur nam, provident dolores quae sunt in illo eligendi quod facere omnis minima voluptas.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente obcaecati temporibus cumque totam veritatis labore ratione error, est, id, necessitatibus dignissimos ex sed! Modi molestias accusamus odio? Voluptates, numquam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit sunt excepturi ullam maiores soluta autem est corrupti, earum eos asperiores quo dolore fugiat nobis deleniti deserunt quaerat laboriosam? Dolorem, voluptates.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt quia corporis non at eius aliquam aperiam nesciunt, odit veritatis delectus impedit neque doloremque consequuntur iste maiores modi, libero sit enim.lorem
+                    I like movies, video games, and code!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quas fuga sequi nihil repellat explicabo eaque similique ipsa quos velit sint possimus quam nam obcaecati et, optio eos illo laborum?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit tempore assumenda eaque, perspiciatis, doloribus, reprehenderit nobis eos nemo incidunt officia dolorum porro natus voluptates facere quos consectetur molestiae vel!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil repellat hic voluptate aspernatur voluptatem enim, pariatur nam, provident dolores quae sunt in illo eligendi quod facere omnis minima voluptas.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente obcaecati temporibus cumque totam veritatis labore ratione error, est, id, necessitatibus dignissimos ex sed! Modi molestias accusamus odio? Voluptates, numquam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit sunt excepturi ullam maiores soluta autem est corrupti, earum eos asperiores quo dolore fugiat nobis deleniti deserunt quaerat laboriosam? Dolorem, voluptates.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt quia corporis non at eius aliquam aperiam nesciunt, odit veritatis delectus impedit neque doloremque consequuntur iste maiores modi, libero sit enim.lorem
+                    I like movies, video games, and code!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quas fuga sequi nihil repellat explicabo eaque similique ipsa quos velit sint possimus quam nam obcaecati et, optio eos illo laborum?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit tempore assumenda eaque, perspiciatis, doloribus, reprehenderit nobis eos nemo incidunt officia dolorum porro natus voluptates facere quos consectetur molestiae vel!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil repellat hic voluptate aspernatur voluptatem enim, pariatur nam, provident dolores quae sunt in illo eligendi quod facere omnis minima voluptas.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente obcaecati temporibus cumque totam veritatis labore ratione error, est, id, necessitatibus dignissimos ex sed! Modi molestias accusamus odio? Voluptates, numquam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit sunt excepturi ullam maiores soluta autem est corrupti, earum eos asperiores quo dolore fugiat nobis deleniti deserunt quaerat laboriosam? Dolorem, voluptates.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt quia corporis non at eius aliquam aperiam nesciunt, odit veritatis delectus impedit neque doloremque consequuntur iste maiores modi, libero sit enim.lorem
+                    I like movies, video games, and code!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quas fuga sequi nihil repellat explicabo eaque similique ipsa quos velit sint possimus quam nam obcaecati et, optio eos illo laborum?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit tempore assumenda eaque, perspiciatis, doloribus, reprehenderit nobis eos nemo incidunt officia dolorum porro natus voluptates facere quos consectetur molestiae vel!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil repellat hic voluptate aspernatur voluptatem enim, pariatur nam, provident dolores quae sunt in illo eligendi quod facere omnis minima voluptas.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente obcaecati temporibus cumque totam veritatis labore ratione error, est, id, necessitatibus dignissimos ex sed! Modi molestias accusamus odio? Voluptates, numquam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit sunt excepturi ullam maiores soluta autem est corrupti, earum eos asperiores quo dolore fugiat nobis deleniti deserunt quaerat laboriosam? Dolorem, voluptates.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt quia corporis non at eius aliquam aperiam nesciunt, odit veritatis delectus impedit neque doloremque consequuntur iste maiores modi, libero sit enim.lorem
                 </p>
             </article>
             <section>
@@ -68,13 +111,19 @@
             </section>
         </main>
 
-        <footer>
+        <!-- Contact -->
+        <section class="contact">
             <h3 id="contact" class="contact">Contact</h3>
             <address>
-                Victor Lujan <br /> <!-- You can use margins instead of br -->
+                1520 Preston Rd. <br /> <!-- You can use margins instead of br -->
+                Plano, Texas <br />
+                
                 E: vmlujanjr@outlook.com <br />
-                P: 956-415-2269 <br />
             </address>
+        </section>
+
+        <!-- Copyright -->
+        <footer>
             <p class="copyright">&copy; 2022 Victor Lujan</p>
         </footer>
     </body>
