added two project links and one placeholder image

--- a/index.html
+++ b/index.html
@@ -71,14 +71,24 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa blanditiis nemo nihil odio. Atque debitis iure non facere mollitia, laudantium odit suscipit totam repellendus quod reprehenderit quaerat, error officia quos. 
                 </p>
             </article>
+            <!-- Projects -->
             <section>
                 <h2 id="projects">Projects</h2>
-                <p>
-                    run-buddy
-                </p>
-                <p>
-                    horiseon
-                </p>
+                <figure class="fig1">
+                    <a href="https://vmlujanjr.github.io/run-buddy/">
+                        <img src="./assets/images/project-runbuddy.PNG"/>
+                    </a>
+                </figure>
+                <figure class="fig2">
+                    <a href="https://vmlujanjr.github.io/chlg_code_refactor/">
+                        <img src="./assets/images/project-horiseon.PNG" />
+                    </a>
+                </figure>
+                <figure class="fig3">
+                    <a href="">
+                        <img src="./assets/images/placeholder500.png" />
+                    </a>
+                </figure>
             </section>
         </main>
 
