--- a/index.html
+++ b/index.html
@@ -72,23 +72,25 @@
                 </p>
             </article>
             <!-- Projects -->
-            <section>
-                <h2 id="projects">Projects</h2>
-                <figure class="fig1">
-                    <a href="https://vmlujanjr.github.io/run-buddy/">
-                        <img src="./assets/images/project-runbuddy.PNG"/>
-                    </a>
-                </figure>
-                <figure class="fig2">
-                    <a href="https://vmlujanjr.github.io/chlg_code_refactor/">
-                        <img src="./assets/images/project-horiseon.PNG" />
-                    </a>
-                </figure>
-                <figure class="fig3">
-                    <a href="">
-                        <img src="./assets/images/placeholder500.png" />
-                    </a>
-                </figure>
+            <section id="projects" class="projects">
+                <h2>Projects</h2>
+                <div class="projects-section">
+                    <figure class="fig1">
+                        <a href="https://vmlujanjr.github.io/run-buddy/">
+                            <img src="./assets/images/project-runbuddy.PNG" alt="a profile of a website named run buddy" />
+                        </a>
+                    </figure>
+                    <figure class="fig2">
+                        <a href="https://vmlujanjr.github.io/chlg_code_refactor/">
+                            <img src="./assets/images/project-horiseon.PNG" alt="a profile of a website named horiseon" />
+                        </a>
+                    </figure>
+                    <figure class="fig3">
+                        <a href="">
+                            <img src="./assets/images/placeholder500.png" />
+                        </a>
+                    </figure>
+                </div>
             </section>
         </main>
 
