added style to projects section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <!-- Main Content -->
         <main>
             <!-- About -->
-            <article>
-                <h2 id="about">About</h2>
+            <article id="about" class="about">
+                <h2>About</h2>
                 <p>
                     I like movies, video games, and code!
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quas fuga sequi nihil repellat explicabo eaque similique ipsa quos velit sint possimus quam nam obcaecati et, optio eos illo laborum?
@@ -74,29 +74,29 @@
             <!-- Projects -->
             <section id="projects" class="projects">
                 <h2>Projects</h2>
-                <div class="projects-section">
+                <section class="projects-section">
                     <figure class="fig1">
                         <a href="https://vmlujanjr.github.io/run-buddy/">
-                            <img src="./assets/images/project-runbuddy.PNG" alt="a profile of a website named run buddy" />
+                            <img src="./assets/images/project-runbuddy.PNG" alt="a profile of a website named run buddy" class="rb-img" />
                         </a>
                     </figure>
                     <figure class="fig2">
                         <a href="https://vmlujanjr.github.io/chlg_code_refactor/">
-                            <img src="./assets/images/project-horiseon.PNG" alt="a profile of a website named horiseon" />
+                            <img src="./assets/images/project-horiseon.PNG" alt="a profile of a website named horiseon" class="hz-img" />
                         </a>
                     </figure>
                     <figure class="fig3">
-                        <a href="">
-                            <img src="./assets/images/placeholder500.png" />
+                        <a href="" alt="" class="">
+                            <img src="./assets/images/placeholder500.png" alt="" class="ph-img" />
                         </a>
                     </figure>
-                </div>
+                </section>
             </section>
         </main>
 
         <!-- Contact -->
         <section id="contact" class="contact">
-            <h3>Contact:</h3>
+            <h2>Contact:</h2>
             <address>
                 <p>1520 Preston Rd.</p>
                 <p>Plano, Texas</p>
