--- a/index.html
+++ b/index.html
@@ -51,25 +51,26 @@
                 </nav>
             </section>
         </header>
-
-        <!-- Hero -->
-        <figure>
-            <img src="./assets/images/avatar.svg" alt="an avatar of the developer" />
-        </figure>
         
         <!-- Main Content -->
         <main>
             <!-- About -->
             <article id="about" class="about">
-                <h2>About</h2>
-                <p>
-                    I like movies, video games, and code!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quas fuga sequi nihil repellat explicabo eaque similique ipsa quos velit sint possimus quam nam obcaecati et, optio eos illo laborum?
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit tempore assumenda eaque, perspiciatis, doloribus, reprehenderit nobis eos nemo incidunt officia dolorum porro natus voluptates facere quos consectetur molestiae vel!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil repellat hic voluptate aspernatur voluptatem enim, pariatur nam, provident dolores quae sunt in illo eligendi quod facere omnis minima voluptas.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente obcaecati temporibus cumque totam veritatis labore ratione error, est, id, necessitatibus dignissimos ex sed! Modi molestias accusamus odio? Voluptates,
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa blanditiis nemo nihil odio. Atque debitis iure non facere mollitia, laudantium odit suscipit totam repellendus quod reprehenderit quaerat, error officia quos. 
-                </p>
+                <!-- Profile -->
+                <figure>
+                    <img src="./assets/images/avatar.svg" alt="an avatar of the developer" />
+                </figure>
+                <section class="profile-info">
+                    <h2>About</h2>
+                    <p>
+                        I like movies, video games, and code!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quas fuga sequi nihil repellat explicabo eaque similique ipsa quos velit sint possimus quam nam obcaecati et, optio eos illo laborum?
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit tempore assumenda eaque, perspiciatis, doloribus, reprehenderit nobis eos nemo incidunt officia dolorum porro natus voluptates facere quos consectetur molestiae vel!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil repellat hic voluptate aspernatur voluptatem enim, pariatur nam, provident dolores quae sunt in illo eligendi quod facere omnis minima voluptas.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente obcaecati temporibus cumque totam veritatis labore ratione error, est, id, necessitatibus dignissimos ex sed! Modi molestias accusamus odio? Voluptates,
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa blanditiis nemo nihil odio. Atque debitis iure non facere mollitia, laudantium odit suscipit totam repellendus quod reprehenderit quaerat, error officia quos. 
+                    </p>
+                </section>
             </article>
             <!-- Projects -->
             <section id="projects" class="projects">
