added content to about section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </nav>
             </section>
         </header>
-        
+
         <!-- Main Content -->
         <main>
             <!-- About -->
@@ -62,13 +62,32 @@
                 </figure>
                 <section class="profile-info">
                     <h2>About</h2>
+                    <p class="introduction">
+                        Welcome to my Virtual Presence!
+                        <br />
+                        <br />
+                        I am a studius person with a creative mind that is always willing to go the extra mile.
+                    </p>
+                    <h3>Education</h3>
                     <p>
-                        I like movies, video games, and code!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quas fuga sequi nihil repellat explicabo eaque similique ipsa quos velit sint possimus quam nam obcaecati et, optio eos illo laborum?
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque suscipit tempore assumenda eaque, perspiciatis, doloribus, reprehenderit nobis eos nemo incidunt officia dolorum porro natus voluptates facere quos consectetur molestiae vel!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nihil repellat hic voluptate aspernatur voluptatem enim, pariatur nam, provident dolores quae sunt in illo eligendi quod facere omnis minima voluptas.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente obcaecati temporibus cumque totam veritatis labore ratione error, est, id, necessitatibus dignissimos ex sed! Modi molestias accusamus odio? Voluptates,
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa blanditiis nemo nihil odio. Atque debitis iure non facere mollitia, laudantium odit suscipit totam repellendus quod reprehenderit quaerat, error officia quos. 
+                        I've attended Texas A&M International University and graduated with a Bachelor's degree in Political Sciences and a minor in Criminal Justice systems for future deterance in criminal activities and rehabilitation of criminals throughout the incarceration process.
+                        <br />
+                        <br />
+                        I am advancing my education in Southern Methodist University by attending their web development bootcamp. 
+                    </p>
+                    <div class="test">
+                        <h3>Skills</h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Git</li>
+                            <li>GitHub</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
+                    <h3>Background</h3>
+                    <p>
+                        I own a property management business, and I've previously worked for two big corporate giants; Target Corp. and Pilot Thomas Logistics. I have always applied 140% effort to everything I do. No matter how big or small. I always prioritize the objective at hand.
                     </p>
                 </section>
             </article>
