added another project

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                         </a>
                     </figure>
                     <figure class="fig3">
-                        <a href="" alt="" class="">
-                            <img src="./assets/images/placeholder500.png" alt="" class="ph-img" />
+                        <a href="https://vmlujanjr.github.io/robot-gladiators/">
+                            <img src="./assets/images/project-robotgladiators.PNG" alt="a profile of a website named robot gladiators" class="ph-img" />
                         </a>
                     </figure>
                 </section>
