initial media query additions

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <article id="about" class="about">
                 <!-- Profile -->
                 <figure>
-                    <img src="./assets/images/avatar.svg" alt="an avatar of the developer" />
+                    <img src="./assets/images/avatar.svg" alt="an avatar of the developer" class="avatar" />
                 </figure>
                 <section class="profile-info">
                     <h2>About</h2>
