added overlay to project images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </nav>
             </section>
         </header>
-
+        
         <!-- Main Content -->
         <main>
             <!-- About -->
@@ -95,19 +95,37 @@
             <section id="projects" class="projects">
                 <h2>Projects</h2>
                 <section class="projects-section">
-                    <figure class="fig1">
+                    <figure class="image">
                         <a href="https://vmlujanjr.github.io/run-buddy/">
                             <img src="./assets/images/project-runbuddy.PNG" alt="a profile of a website named run buddy" class="rb-img" />
+                            <section class="image-overlay">
+                                <h4 class="image-title">Run-Buddy</h4>
+                                <p class="image-description">
+                                    HTML / CSS
+                                </p>
+                            </section>
                         </a>
                     </figure>
-                    <figure class="fig2">
+                    <figure class="image-sec-2">
                         <a href="https://vmlujanjr.github.io/chlg_code_refactor/">
                             <img src="./assets/images/project-horiseon.PNG" alt="a profile of a website named horiseon" class="hz-img" />
+                            <section class="image-overlay">
+                                <h4 class="image-title">Horiseon Refactor</h4>
+                                <p class="image-description">
+                                    HTML / CSS
+                                </p>
+                            </section>
                         </a>
                     </figure>
-                    <figure class="fig3">
+                    <figure class="image-sec-2">
                         <a href="https://vmlujanjr.github.io/robot-gladiators/">
                             <img src="./assets/images/project-robotgladiators.PNG" alt="a profile of a website named robot gladiators" class="ph-img" />
+                            <section class="image-overlay">
+                                <h4>Robot Gladiators</h4>
+                                <p>
+                                    JavaScript
+                                </p>
+                            </section>
                         </a>
                     </figure>
                 </section>
