--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <h3>Background</h3>
                     <p>
-                        I own a property management business, and I've previously worked for two big corporate giants; Target Corp. and Pilot Thomas Logistics. I have always applied 140% effort to everything I do. No matter how big or small. I always prioritize the objective at hand.
+                        I've previously worked for two big corporate giants; Target Corp. and Pilot Thomas Logistics. I have always applied 140% effort to everything I do. No matter how big or small. I always prioritize the objective at hand.
                     </p>
                 </section>
             </article>
