--- a/index.html
+++ b/index.html
@@ -130,18 +130,19 @@
                     </figure>
                 </section>
             </section>
+            
+            <!-- Contact -->
+            <section id="contact" class="contact">
+                <h2>Contact:</h2>
+                <address>
+                    <p>1520 Preston Rd.</p>
+                    <p>Plano, Texas</p>
+                    <p>P: 956-415-2269</p>
+                    <p>E: <a href="mailto:vmlujanjr@outlook.com">vmlujanjr@outlook.com</a></p>
+                    <p><a href="https://github.com/VMLujanJr" class="git">GitHub</a></p>
+                </address>
+            </section>
         </main>
-
-        <!-- Contact -->
-        <section id="contact" class="contact">
-            <h2>Contact:</h2>
-            <address>
-                <p>1520 Preston Rd.</p>
-                <p>Plano, Texas</p>
-                <p>P: 956-415-2269</p>
-                <p>E: <a href="mailto:vmlujanjr@outlook.com">vmlujanjr@outlook.com</a></p>
-            </address>
-        </section>
 
         <!-- Copyright -->
         <footer>
