--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
                 <h2>Projects</h2>
                 <section class="projects-section">
                     <figure class="image">
-                        <a href="https://vmlujanjr.github.io/currex/">
-                            <img src="./assets/images/currex.PNG" alt="a profile of a website named currex" class="rb-img" />
+                        <a href="https://fierce-temple-92608.herokuapp.com/">
+                            <img src="./assets/images/Slayers.PNG" alt="a profile of a website named slayers" class="rb-img" />
                             <section class="image-overlay">
-                                <h4 class="image-title">Currex</h4>
+                                <h4 class="image-title">Slayers</h4>
                                 <p class="image-description">
-                                    HTML / CSS / JavaScript
+                                    HTML / CSS / JavaScript / Express.js
                                 </p>
                             </section>
                         </a>
